--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iota/dapp-kit": "^0.1.2",
+    "@iota/iota-sdk": "^0.1.1",
+    "@iota/wallet-standard": "^0.1.2",
+    "@msafe/iota-app-store": "^1.1.1",
+    "@msafe/iota-utils": "^1.1.2",
+    "@msafe/iota-wallet": "^1.1.1",
     "@msafe/msafe-ui": "^1.5.84",
-    "@msafe/sui-wallet": "^0.0.41",
-    "@msafe/sui3-utils": "^3.1.55-pre-1d77150.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.14.15",
-    "@mysten/dapp-kit": "^0.12.2",
-    "@mysten/sui.js": "^0.50.1",
-    "@mysten/wallet-standard": "^0.10.3",
     "@tanstack/react-query": "^5.24.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
@@ -52,5 +53,6 @@
   },
   "resolutions": {
     "aptos": "1.20.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
